--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
   <h1>Hello Github Pages</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, earum distinctio nostrum laboriosam optio sit cumque illo quidem quas deleniti molestiae sequi pariatur, sed minus corrupti recusandae? Pariatur, similique iste!</p>
 </body>
 </html>
